# ap_compositor

./: .gitmodules  LICENSE  README.md  azure-pipelines.yml
host_configs/: blueos_clang-ibm_2019_10_03.cmake  blueos_xl_2020_3_18.cmake  toss3_intel_17.cmake  toss3_intel_18.cmake  toss3_intel_19.cmake
src/: CMakeLists.txt
src/apcomp/: AbsorptionPartial.hpp  CMakeLists.txt  Compositor.cpp  Compositor.hpp  DirectSendCompositor.cpp  Image.cpp  Image.hpp  ImageCompositor.hpp  PartialCompositor.cpp  PartialCompositor.hpp  PayloadCompositor.cpp  PayloadCompositor.hpp  PayloadImage.hpp  PayloadImageCompositor.hpp  RadixKCompositor.cpp  RadixKCompositor.hpp  apcomp.cpp  apcomp.hpp  apcomp_diy_collect.hpp  apcomp_diy_partial_blocks.hpp  apcomp_diy_partial_collect.hpp  apcomp_diy_utils.hpp  bounds.hpp  compositor.cpp  compositor.hpp  image.cpp  image.hpp  partial_compositor.cpp  partial_compositor.hpp  payload_compositor.cpp  payload_compositor.hpp  payload_image.hpp  scalar_image.hpp
src/apcomp/internal/: DirectSendCompositor.cpp  DirectSendCompositor.hpp  ImageCompositor.hpp  MPICollect.hpp  PayloadImageCompositor.hpp  RadixKCompositor.cpp  RadixKCompositor.hpp  apcomp_diy_collect.hpp  apcomp_diy_image_block.hpp  apcomp_diy_partial_blocks.hpp  apcomp_diy_partial_collect.hpp  apcomp_diy_partial_redistribute.hpp
src/apcomp/utils/: PNGEncoder.cpp  data_logger.cpp  data_logger.hpp  file_utils.cpp  file_utils.hpp  png_compare.cpp  timer.hpp  yaml_writer.hpp
src/cmake/: CMakeBasics.cmake  SetupBLT.cmake  SetupIncludes.cmake  SetupTests.cmake  VTKhConfig.cmake.in
src/config/: APCompConfig.cmake.in  CMakeLists.txt  apcomp_config.mk.in  apcomp_setup_deps.cmake
src/examples/: CMakeLists.txt
src/examples/using-with-cmake/: CMakeLists.txt  apcomp_example.cpp
src/examples/using-with-make/: Makefile
src/tests/: CMakeLists.txt  t_apcomp_c_order.cpp  t_apcomp_c_order_mpi.cpp  t_apcomp_smoke.cpp  t_apcomp_volume_partials.cpp  t_apcomp_volume_partials_mpi.cpp  t_apcomp_zbuffer.cpp  t_apcomp_zbuffer_mpi.cpp  t_config.hpp.in  t_test_utils.h
src/thirdparty_builtin/: CMakeLists.txt
src/thirdparty_builtin/diy/: CMakeLists.txt
src/thirdparty_builtin/diy/include/diy/: serialization.hpp
src/thirdparty_builtin/lodepng/: CMakeLists.txt
